--- a/osu.Framework.Templates/templates/template-flappy/Directory.Build.props
+++ b/osu.Framework.Templates/templates/template-flappy/Directory.Build.props
@@ -3,4 +3,8 @@
   <PropertyGroup>
     <ApplicationManifest>$(MSBuildThisFileDirectory)app.manifest</ApplicationManifest>
   </PropertyGroup>
+  <PropertyGroup Label="Documentation">
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);CS1591</NoWarn>
+  </PropertyGroup>
 </Project>
