--- a/osu.Framework/osu.Framework.csproj
+++ b/osu.Framework/osu.Framework.csproj
@@ -54,5 +54,6 @@
          See https://github.com/xoofx/markdig/issues/564 -->
     <PackageReference Include="Markdig" Version="0.23.0" />
     <PackageReference Include="System.Numerics.Tensors" Version="8.0.0" />
+    <PackageReference Include="Vortice.Direct3D12" Version="3.5.0" />
   </ItemGroup>
 </Project>
