--- a/osu.Framework.Tests.TUnit/osu.Framework.Tests.TUnit.csproj
+++ b/osu.Framework.Tests.TUnit/osu.Framework.Tests.TUnit.csproj
@@ -2,9 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>osu.Framework.Tests.Wangs</RootNamespace>
+    <RootNamespace>osu.Framework.Tests</RootNamespace>
     <Nullable>enable</Nullable>
-    <LangVersion>Latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
